change package.json display name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "com.daviddebnar.backport-system-text-json-min",
     "version": "0.0.1",
-    "displayName": "Minimal System Text Json",
+    "displayName": "Minimal Backport of System.Text.Json",
     "description": "Minimal port of System.Text.Json for C# 7 based on .NET Runtime version 6.0.22",
     "unity": "2019.1",
     "unityRelease": "0a0",
